# axpm

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
include/: pkgparser.h
sample/: CMakeLists.txt  manifest.json  source.cpp
src/: CMakeLists.txt  main.cpp  pkgparser.cpp
